c++: allow stores to anon union vars to change current union member in constexpr [PR117614]

Since r14-4771 the FE tries to differentiate between cases where the lhs
of a store allows changing the current union member and cases where it
doesn't, and cases where it doesn't includes everything that has gone
through the cxx_eval_constant_expression path on the lhs.
As the testcase shows, DECL_ANON_UNION_VAR_P vars were handled like that
too, even when stores to them are the only way how to change the current
union member in the sources.

So, the following patch just handles that case manually without calling
cxx_eval_constant_expression and without setting evaluated to true.

2024-12-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/117614
	* constexpr.cc (cxx_eval_store_expression): For stores to
	DECL_ANON_UNION_VAR_P vars just continue with DECL_VALUE_EXPR
	of it, without setting evaluated to true or full
	cxx_eval_constant_expression.

	* g++.dg/cpp2a/constexpr-union8.C: New test.